# llm

./: .gitignore  pyproject.toml
before_llm/: lstm.ipynb  prophet_ex.ipynb  prophet_time.ipynb
chatbot/: chat_utils.py  st_main.py
chatbot/pages/: chat.py  components.py
chatbot/resources/: data.json
data/: mydata.json
llm/: gpt_prompt.ipynb  hugging_face_dataset.ipynb  hugging_face_finetuning.ipynb  hugging_face_model.ipynb  llm.ipynb  ollama_chatbot.ipynb  stt_tts.ipynb
web_socket/: client.py  server.py
web_socket/models/: chat_utils.py  landmark.py
