[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "openai>=1.107.0",
    "pandas>=2.3.2",
    "prophet>=1.1.7",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "yfinance>=0.2.65",
]
